; ModuleID = '/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_frontend.c_netplay_post_frame.c'
source_filename = "/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_frontend.c_netplay_post_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64, %struct.netplay_connection*, i32 }
%struct.netplay_connection = type { i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @netplay_post_frame(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.netplay_connection*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %6 = call i32 @retro_assert(%struct.TYPE_8__* %5)
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %8 = call i32 @netplay_update_unread_ptr(%struct.TYPE_8__* %7)
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %10 = call i32 @netplay_sync_post_frame(%struct.TYPE_8__* %9, i32 0)
  store i64 0, i64* %3, align 8
  br label %11

11:                                               ; preds = %40, %1
  %12 = load i64, i64* %3, align 8
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ult i64 %12, %15
  br i1 %16, label %17, label %43

17:                                               ; preds = %11
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 1
  %20 = load %struct.netplay_connection*, %struct.netplay_connection** %19, align 8
  %21 = load i64, i64* %3, align 8
  %22 = getelementptr inbounds %struct.netplay_connection, %struct.netplay_connection* %20, i64 %21
  store %struct.netplay_connection* %22, %struct.netplay_connection** %4, align 8
  %23 = load %struct.netplay_connection*, %struct.netplay_connection** %4, align 8
  %24 = getelementptr inbounds %struct.netplay_connection, %struct.netplay_connection* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %39

27:                                               ; preds = %17
  %28 = load %struct.netplay_connection*, %struct.netplay_connection** %4, align 8
  %29 = getelementptr inbounds %struct.netplay_connection, %struct.netplay_connection* %28, i32 0, i32 2
  %30 = load %struct.netplay_connection*, %struct.netplay_connection** %4, align 8
  %31 = getelementptr inbounds %struct.netplay_connection, %struct.netplay_connection* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @netplay_send_flush(i32* %29, i32 %32, i32 0)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %39, label %35

35:                                               ; preds = %27
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %37 = load %struct.netplay_connection*, %struct.netplay_connection** %4, align 8
  %38 = call i32 @netplay_hangup(%struct.TYPE_8__* %36, %struct.netplay_connection* %37)
  br label %39

39:                                               ; preds = %35, %27, %17
  br label %40

40:                                               ; preds = %39
  %41 = load i64, i64* %3, align 8
  %42 = add i64 %41, 1
  store i64 %42, i64* %3, align 8
  br label %11

43:                                               ; preds = %11
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 2
  %46 = load i32, i32* %45, align 8
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %59, label %48

48:                                               ; preds = %43
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %49, i32 0, i32 1
  %51 = load %struct.netplay_connection*, %struct.netplay_connection** %50, align 8
  %52 = getelementptr inbounds %struct.netplay_connection, %struct.netplay_connection* %51, i64 0
  %53 = getelementptr inbounds %struct.netplay_connection, %struct.netplay_connection* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %59, label %56

56:                                               ; preds = %48
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %58 = call i32 @netplay_disconnect(%struct.TYPE_8__* %57)
  br label %59

59:                                               ; preds = %56, %48, %43
  ret void
}

declare dso_local i32 @retro_assert(%struct.TYPE_8__*) #1

declare dso_local i32 @netplay_update_unread_ptr(%struct.TYPE_8__*) #1

declare dso_local i32 @netplay_sync_post_frame(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @netplay_send_flush(i32*, i32, i32) #1

declare dso_local i32 @netplay_hangup(%struct.TYPE_8__*, %struct.netplay_connection*) #1

declare dso_local i32 @netplay_disconnect(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
